test/files/events-neg/override-observable-needs-observable.scala
class C1 {
  observable def m() = ()
}
class C2 extends C1 {
  override def m() = ()
}

// vim: set ts=4 sw=4 et:
